docs: 精简答辩文档,只讲业务和算法,每人 1.5 分钟